force-app/main/default/objects/Test_Run__c/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <formula>TEXT(Test_Script__r.Browser__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Browser</label>
    <type>Text</type>
</CustomField>