force-app/main/default/objects/Test_Run__c/fields/Browser_Version__c.field-meta.xml
<CustomField>
    <fullName>Browser_Version__c</fullName>
    <label>Browser Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>