force-app/main/default/objects/Test_Run__c/fields/Date_Run__c.field-meta.xml
<CustomField>
    <fullName>Date_Run__c</fullName>
    <label>Date Run</label>
    <type>DateTime</type>
</CustomField>