force-app/main/default/objects/Test_Run__c/fields/Fail_Description__c.field-meta.xml
<CustomField>
    <fullName>Fail_Description__c</fullName>
    <inlineHelpText>What caused the test to fail? Please attach paste error message here and attach a screenshot, if necessary.</inlineHelpText>
    <label>Fail Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>