force-app/main/default/objects/Test_Run__c/fields/Fail_Step__c.field-meta.xml
<CustomField>
    <fullName>Fail_Step__c</fullName>
    <inlineHelpText>At which step number did the test fail?</inlineHelpText>
    <label>Fail Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>