force-app/main/default/objects/Test_Run__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>http://www.wilsonmar.com/1tstwrit.htm</description>
    <inlineHelpText>Pass - Expected Results are received
Fail - Conclusive evidence that requirements are not met
Inconclusive - No proof that a Pass or Fail verdict can be given
Test Error - Problem with the test case or testing system itself</inlineHelpText>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Inconclusive</fullName>
            </value>
            <value>
                <fullName>Test Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>