force-app/main/default/objects/Test_Run__c/fields/Tester__c.field-meta.xml
<CustomField>
    <fullName>Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who ran the test</description>
    <inlineHelpText>User who ran the test</inlineHelpText>
    <label>Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>